@@ -22,7 +22,6 @@ AutoPrereqs.skips[5] = ^OldMoose$
 Class::MOP = 0
 Moose = 0.56
 MooseX::Role::WithOverloading = 0
-MooseX::MarkAsMethods = 0
 Moo = 0
 Mouse = 0
 Sub::Name = 0
