@@ -128,7 +128,6 @@ work correctly for methods from roles consumed at compile time.
 * L<Sub::Exporter::ForMethods>
 * L<Sub::Name>
 * L<Sub::Install>
-* L<MooseX::MarkAsMethods>
 * L<Test::CleanNamespaces>
 * L<Dist::Zilla::Plugin::Test::CleanNamespaces>
 
